Added Products endpoint in API

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DbConnection":"Server=localhost,1433;Database=EdKart;User Id=sa;Password=Edkart@2024;TrustServerCertificate=True"
+    "DbConnection":"Server=localhost,1434;Database=EdKart2;User Id=sa;Password=Edkart@2024;TrustServerCertificate=True"
   }
 }
