--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,11 @@
 services:
   sql:
-    image: mcr.microsoft.com/azure-sql-edge
-    # environment:
-    #   ACCEPT_EULA=1
-    #   MSSQL_SA_PASSWORD=Edkart@2024
+    image: mcr.microsoft.com/mssql/server:2022-latest
     environment:
-      - ACCEPT_EULA=1
-      - MSSQL_SA_PASSWORD=Edkart@2024
+      ACCEPT_EULA: "Y"
+      MSSQL_SA_PASSWORD: Edkart@2024
     ports:
-      - "1433:1433"
+      - "1434:1433"
     
 
 
